--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,9 @@
           <ul class="list top-list">
             <li><a href="./index.html" class="link list-nav">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="link list-nav">Portfolio</a>
+              <a href="./portfolio.html" class="link list-nav"
+                ><span class="portfolio-after-child">Portfolio</span></a
+              >
             </li>
             <li><a href="" class="link list-nav">Contacts</a></li>
           </ul>
@@ -67,13 +69,17 @@
 
           <ul class="list porfolio-list">
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                ><img
-                  class="image-class"
-                  src="./images/banking-app.jpg"
-                  alt="purple application cards"
-                  width="360"
-                />
+              <a href="" class="link image-class-link">
+                <figure class="image-wrapper">
+                  <img
+                    class="image-class"
+                    src="./images/banking-app.jpg"
+                    alt="purple application cards"
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
+
                 <div class="card-foot">
                   <h2 class="header-three">Banking App Interface Concept</h2>
                   <p class="list-card-text">App</p>
@@ -82,14 +88,17 @@
             </li>
 
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                ><img
+              <a href="" class="link image-class-link"></a>
+                <figure class="image-wrapper">
+                <img
                   class="image-class"
                   src="./images/cashless-payment.jpg"
                   alt="somebody scans qr code
           with smartphone"
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Cashless Payment</h2>
                   <p class="list-card-text">Marketing</p>
@@ -97,14 +106,17 @@
               </a>
             </li>
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                ><img
+              <a href="" class="link image-class-link">
+                <figure class="image-wrapper">
+                  <img
                   class="image-class"
                   src="./images/meditation-app.jpg"
                   alt="laptop and smartphone with
           the same blue red and green colour on the screen "
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Meditation App</h2>
                   <p class="list-card-text">App</p>
@@ -112,14 +124,17 @@
               </a>
             </li>
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                ><img
+              <a href="" class="link image-class-link">
+                <figure class="image-wrapper">
+                <img
                   class="image-class"
                   src="./images/taxi-service.jpg"
                   alt="driver holding the
           steering wheel of the car"
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Taxi Service</h2>
                   <p class="list-card-text">Marketing</p>
@@ -128,6 +143,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
+                <figure class="image-wrapper">
                 <img
                   class="image-class"
                   src="./images/screen-illustrations.jpg"
@@ -135,6 +151,8 @@
           smartphone walpaper with the date ana time"
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Screen Illustrations</h2>
                   <p class="list-card-text">Design</p>
@@ -143,6 +161,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
+                <figure class="image-wrapper">
                 <img
                   class="image-class"
                   src="./images/online-courses.jpg"
@@ -150,6 +169,8 @@
           and grey cap smiling to her smartphone "
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Online Courses</h2>
                   <p class="list-card-text">Marketing</p>
@@ -158,13 +179,17 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link"
-                ><img
+                >
+                <figure class="image-wrapper">
+                <img
                   class="image-class"
                   src="./images/instagram-stories.jpg"
                   alt="six bright small cards
           with two people and short desription"
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Instagram Stories Concept</h2>
                   <p class="list-card-text">Design</p>
@@ -173,26 +198,35 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link"
-                ><img
+                >
+                <figure class="image-wrapper">
+                <img
                   class="image-class"
                   src="./images/organic-food.jpg"
                   alt="woman in grey clothes carries a bag with vegetables and fruit"
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Organic Food</h2>
                   <p class="list-card-text">Web Site</p>
+
                 </div>
               </a>
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link"
-                ><img
+                >
+                <figure class="image-wrapper">
+                <img
                   class="image-class"
                   src="./images/fresh-coffe.jpg"
                   alt="cup of coffee with milk"
                   width="360"
                 />
+                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Fresh Coffee</h2>
                   <p class="list-card-text">Web Site</p>
