--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
             >Web<span class="logo-studio">Studio</span></a
           >
           <ul class="list top-list">
-            <li><a href="./index.html" class="link list-nav">Studio</a></li>
+            <li class="studio-after">
+              <a href="./index.html" class="link list-nav"
+                ><span class="studio-after-child">Studio</span></a
+              >
+            </li>
             <li>
               <a href="./portfolio.html" class="link list-nav">Portfolio</a>
             </li>
@@ -53,7 +57,9 @@
       <section class="main">
         <div class="container">
           <h1 class="main-title">Effective Solutions for Your Business</h1>
-          <button type="button" class="main-button">Order Service</button>
+          <button data-modal-open type="button" class="main-button">
+            Order Service
+          </button>
         </div>
       </section>
 
@@ -428,5 +434,15 @@
         </div>
       </div>
     </footer>
+    <aside class="modal-window is-hidden" data-modal>
+      <section class="modal-body">
+        <button class="button-close-modal" type="button" data-modal-close>
+          <svg class="icon-close" width="8" height="8">
+            <use href="/images/icons.svg#icon-close-black-18dp-2-1-2"></use>
+          </svg>
+        </button>
+      </section>
+    </aside>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
