--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,11 @@
                     alt="purple application cards"
                     width="360"
                   />
-                  <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
 
                 <div class="card-foot">
@@ -88,16 +92,20 @@
             </li>
 
             <li class="list-card">
-              <a href="" class="link image-class-link"></a>
+              <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/cashless-payment.jpg"
-                  alt="somebody scans qr code
+                  <img
+                    class="image-class"
+                    src="./images/cashless-payment.jpg"
+                    alt="somebody scans qr code
           with smartphone"
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Cashless Payment</h2>
@@ -109,13 +117,17 @@
               <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
                   <img
-                  class="image-class"
-                  src="./images/meditation-app.jpg"
-                  alt="laptop and smartphone with
+                    class="image-class"
+                    src="./images/meditation-app.jpg"
+                    alt="laptop and smartphone with
           the same blue red and green colour on the screen "
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Meditation App</h2>
@@ -126,14 +138,18 @@
             <li class="list-card">
               <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/taxi-service.jpg"
-                  alt="driver holding the
+                  <img
+                    class="image-class"
+                    src="./images/taxi-service.jpg"
+                    alt="driver holding the
           steering wheel of the car"
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Taxi Service</h2>
@@ -144,14 +160,18 @@
             <li class="list-card">
               <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/screen-illustrations.jpg"
-                  alt="big moon on
+                  <img
+                    class="image-class"
+                    src="./images/screen-illustrations.jpg"
+                    alt="big moon on
           smartphone walpaper with the date ana time"
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Screen Illustrations</h2>
@@ -162,14 +182,18 @@
             <li class="list-card">
               <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/online-courses.jpg"
-                  alt="woman with orange sweater
+                  <img
+                    class="image-class"
+                    src="./images/online-courses.jpg"
+                    alt="woman with orange sweater
           and grey cap smiling to her smartphone "
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Online Courses</h2>
@@ -178,17 +202,20 @@
               </a>
             </li>
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                >
+              <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/instagram-stories.jpg"
-                  alt="six bright small cards
+                  <img
+                    class="image-class"
+                    src="./images/instagram-stories.jpg"
+                    alt="six bright small cards
           with two people and short desription"
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Instagram Stories Concept</h2>
@@ -197,35 +224,40 @@
               </a>
             </li>
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                >
+              <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/organic-food.jpg"
-                  alt="woman in grey clothes carries a bag with vegetables and fruit"
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                  <img
+                    class="image-class"
+                    src="./images/organic-food.jpg"
+                    alt="woman in grey clothes carries a bag with vegetables and fruit"
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Organic Food</h2>
                   <p class="list-card-text">Web Site</p>
-
                 </div>
               </a>
             </li>
             <li class="list-card">
-              <a href="" class="link image-class-link"
-                >
+              <a href="" class="link image-class-link">
                 <figure class="image-wrapper">
-                <img
-                  class="image-class"
-                  src="./images/fresh-coffe.jpg"
-                  alt="cup of coffee with milk"
-                  width="360"
-                />
-                <figcaption class="figaption-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</figcaption>
+                  <img
+                    class="image-class"
+                    src="./images/fresh-coffe.jpg"
+                    alt="cup of coffee with milk"
+                    width="360"
+                  />
+                  <figcaption class="figaption-text">
+                    14 Stylish and User-Friendly App Design Concepts · Task
+                    Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
+                    App · Cloud Storage App
+                  </figcaption>
                 </figure>
                 <div class="card-foot">
                   <h2 class="header-three">Fresh Coffee</h2>
