--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
           >
           <ul class="list top-list">
             <li class="studio-after">
-              <a href="./index.html" class="link list-nav"
-                ><span class="studio-after-child">Studio</span></a
+              <a href="./index.html" class="lInk list-nav">
+                <span class="child">Studio</span></a
               >
             </li>
             <li>
