--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
           >
           <ul class="list top-list">
             <li class="studio-after">
-              <a href="./index.html" class="lInk list-nav">
-                <span class="child">Studio</span></a
-              >
+              <a href="./index.html" class="link list-nav">Studio</a>
             </li>
             <li>
               <a href="./portfolio.html" class="link list-nav">Portfolio</a>
