--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           >
           <ul class="list top-list">
             <li class="studio-after">
-              <a href="./index.html" class="link list-nav child">Studio</a>
+              <a href="./index.html" class="link child">Studio</a>
             </li>
             <li>
               <a href="./portfolio.html" class="link list-nav">Portfolio</a>
