--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
         </div>
       </div>
     </footer>
-    <aside class="modal-window is-hidden" data-modal>
+    <div class="modal-window is-hidden" data-modal>
       <section class="modal-body">
         <button class="button-close-modal" type="button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
@@ -440,7 +440,7 @@
           </svg>
         </button>
       </section>
-    </aside>
+    </div>
     <script src="./js/modal.js"></script>
   </body>
 </html>
