--- a/index.html
+++ b/index.html
@@ -433,13 +433,13 @@
       </div>
     </footer>
     <div class="modal-window is-hidden" data-modal>
-      <section class="modal-body">
+      <div class="modal-body">
         <button class="button-close-modal" type="button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
             <use href="/images/icons.svg#icon-close-black-18dp-2-1-2"></use>
           </svg>
         </button>
-      </section>
+      </div>
     </div>
     <script src="./js/modal.js"></script>
   </body>
