--- a/index.html
+++ b/index.html
@@ -436,7 +436,7 @@
       <div class="modal-body">
         <button class="button-close-modal" type="button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
-            <use href="/images/icons.svg#icon-close-black-18dp-2-1-2"></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
           </svg>
         </button>
       </div>
