--- a/index.html
+++ b/index.html
@@ -434,11 +434,7 @@
     </footer>
     <div class="modal-window is-hidden" data-modal>
       <div class="modal-body">
-        <button
-          class="button-close-modal icon-close"
-          type="button"
-          data-modal-close
-        >
+        <button class="button-close-modal" type="button" data-modal-close>
           <svg class="icon-close" width="8" height="8">
             <use href="./images/icons.svg#icon-close-black-18dp-2-1-2"></use>
           </svg>
