--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,7 @@
           <ul class="list top-list">
             <li><a href="./index.html" class="link list-nav">Studio</a></li>
             <li>
-              <a href="./portfolio.html" class="link child">Portfolio</a>
+              <a href="./portfolio.html" class="link underline">Portfolio</a>
             </li>
             <li><a href="" class="link list-nav">Contacts</a></li>
           </ul>
