--- a/portfolio.html
+++ b/portfolio.html
@@ -68,19 +68,19 @@
           <ul class="list porfolio-list">
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/banking-app.jpg"
                     alt="purple application cards"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="figaption-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
 
                 <div class="card-foot">
                   <h2 class="header-three">Banking App Interface Concept</h2>
@@ -91,7 +91,7 @@
 
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/cashless-payment.jpg"
@@ -99,12 +99,12 @@
           with smartphone"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="figaption-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Cashless Payment</h2>
                   <p class="list-card-text">Marketing</p>
