--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
                     alt="purple application cards"
                     width="360"
                   />
-                  <p class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -99,7 +99,7 @@
           with smartphone"
                     width="360"
                   />
-                  <p class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
@@ -113,7 +113,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/meditation-app.jpg"
@@ -121,12 +121,12 @@
           the same blue red and green colour on the screen "
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Meditation App</h2>
                   <p class="list-card-text">App</p>
@@ -135,7 +135,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/taxi-service.jpg"
@@ -143,12 +143,12 @@
           steering wheel of the car"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Taxi Service</h2>
                   <p class="list-card-text">Marketing</p>
@@ -157,7 +157,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/screen-illustrations.jpg"
@@ -165,12 +165,12 @@
           smartphone walpaper with the date ana time"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Screen Illustrations</h2>
                   <p class="list-card-text">Design</p>
@@ -179,7 +179,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/online-courses.jpg"
@@ -187,12 +187,12 @@
           and grey cap smiling to her smartphone "
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Online Courses</h2>
                   <p class="list-card-text">Marketing</p>
@@ -201,7 +201,7 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/instagram-stories.jpg"
@@ -209,12 +209,12 @@
           with two people and short desription"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Instagram Stories Concept</h2>
                   <p class="list-card-text">Design</p>
@@ -223,19 +223,19 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/organic-food.jpg"
                     alt="woman in grey clothes carries a bag with vegetables and fruit"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Organic Food</h2>
                   <p class="list-card-text">Web Site</p>
@@ -244,19 +244,19 @@
             </li>
             <li class="list-card">
               <a href="" class="link image-class-link">
-                <figure class="image-wrapper">
+                <div class="image-wrapper">
                   <img
                     class="image-class"
                     src="./images/fresh-coffe.jpg"
                     alt="cup of coffee with milk"
                     width="360"
                   />
-                  <figcaption class="figaption-text">
+                  <p class="wrapper-text">
                     14 Stylish and User-Friendly App Design Concepts · Task
                     Manager App · Calorie Tracker App · Exotic Fruit Ecommerce
                     App · Cloud Storage App
-                  </figcaption>
-                </figure>
+                  </p>
+                </div>
                 <div class="card-foot">
                   <h2 class="header-three">Fresh Coffee</h2>
                   <p class="list-card-text">Web Site</p>
